<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewName1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textViewName" />

                <TextView
                    android:id="@+id/textViewNumber1"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textViewNumber" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonCall1"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonCall" />

            <Button
                android:id="@+id/buttonText1"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewName2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textViewName2" />

                <TextView
                    android:id="@+id/textViewNumber2"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textViewNumber2" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonCall2"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonCall" />

            <Button
                android:id="@+id/buttonText2"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="56dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewName3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/textViewName3" />

                <TextView
                    android:id="@+id/textViewNumber3"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textViewNumber3" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonCall3"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonCall" />

            <Button
                android:id="@+id/buttonText3"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonText" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewStatus" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>